feat(audit): add audit log functionality with filtering and pagination
- Introduced new API endpoint `/audit` for retrieving audit logs.
- Updated demo data to include sample audit entries.
- Enhanced frontend to display audit logs with search and category filters.
- Added new translations for audit log features in English and German.
- Updated Dockerfile and docker-compose for improved build and deployment.
- Added environment variable configuration for admin console.
- Created SPECS.md for backend feature specifications.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "docker:build": "docker build -t sip-wrapper-admin .",
+    "docker:tag": "docker tag sip-wrapper-admin ghcr.io/insidedynamic-de/sip-wrapper-admin:latest",
+    "docker:push": "docker push ghcr.io/insidedynamic-de/sip-wrapper-admin:latest"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
