feat: update branding references from SIP Wrapper to Linkify TalkHub in environment and documentation files

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# SIP Wrapper Admin Console — Environment Variables
+# Linkify TalkHub Admin Console — Environment Variables
 # Copy to .env and adjust values
 
 # Port the admin console listens on (default: 3000)
